# implementation-sample-api-rust

./: Cargo.toml  Makefile  README.md  docker-compose.yml
docker/app/: Dockerfile
src/: main.rs
