[package]
name = "implementation-sample-api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
saasus-sdk-rust = { git = "https://github.com/bigdragon0610/saasus-sdk-rust.git", tag = "v0.1.0" }
serde = { version = "1.0.192", features = ["derive"] }
